Fix welcome image sizing
Remove "flex: 0" from welcome image - this allows the image to shrink
slightly when the screen/window becomes too small, but prevents it from
becoming too large with a bigger screen/window.

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ button {
 }
 
 .welcome-img {
-    flex: 0;
     width: 400px;
 }
 
